src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>SBQQ__RegularPrice__c</fullName>
        <description>Regular Price for this Asset.</description>
        <inlineHelpText>Regular Price for this Asset.</inlineHelpText>
        <label>Regular Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredByAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent Asset. If populated, this Asset is a child in a bundle.</inlineHelpText>
        <label>Required By Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Required By Asset)</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredById__c</fullName>
        <description>The Id of the parent record that requires this record.</description>
        <inlineHelpText>The Id of the parent record that requires this record.</inlineHelpText>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredByProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product of this Asset.</description>
        <inlineHelpText>Parent Product of this Asset.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Assets</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBySubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent Subscription. If populated, this Asset is a child in a bundle.</inlineHelpText>
        <label>Required By Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Assets (Required By Subscription)</relationshipLabel>
        <relationshipName>ChildAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Revised Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RootAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ultimate bundle parent of this Asset</description>
        <inlineHelpText>Ultimate bundle parent of this Asset</inlineHelpText>
        <label>Root Asset (CPQ)</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (RootAsset)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains this asset</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains this asset</inlineHelpText>
        <label>Root Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionEndDate__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets (Quote Line)</relationshipLabel>
        <relationshipName>Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionStartDate__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscribed Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term. This is useful when you want to show a breakdown of payments in separate groups, for different terms, yet you want to discount reflected for the entire duration of the subscription. Leave Term Discount Level blank if you want discount schedules applied based on the term of each line item.</description>
        <inlineHelpText>Schedule for discounts based on subscription term. Setting this to &quot;Group&quot; applies the discount rate for the group term, while setting it to &quot;Quote&quot; applies the discount rate for the entire quote term, regardless of the different terms in your groups.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Assets (Term Discouned)</relationshipLabel>
        <relationshipName>TermDiscountedAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Unit Cost for this Asset.</description>
        <inlineHelpText>Unit Cost for this Asset.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__VirtualAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (Virtual Asset)</relationshipLabel>
        <relationshipName>VirtualAsset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU_Type__c</fullName>
        <formula>Product2.SKU_Type__c</formula>
        <label>SKU Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Delevered_By_Safe_ID__c</fullName>
        <formula>Services_Delivered_By__r.User_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Delevered By Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Delivered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Delivered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Delivery_Date__c</fullName>
        <label>Services Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Notes__c</fullName>
        <label>Services Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_Revenue__c</fullName>
        <formula>IF( CONTAINS( Name, &quot;Services&quot; ), Price , 
IF( CONTAINS( Name, &quot;Technical Account Manager&quot; ), Price , 
IF( CONTAINS( Name, &quot;RAPID Success&quot; ), Price/2 , 
0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Status__c</fullName>
        <label>Services Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Dates</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Engagement__c</fullName>
        <label>Student Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Students_in_Attendance_In_Person__c</fullName>
        <label>Students in Attendance (In Person)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Students_in_Attendance_Remote__c</fullName>
        <label>Students in Attendance (Remote)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_S_Completed__c</fullName>
        <formula>NOT(ISBLANK( Training_Services_Completed_Expired_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T&amp;S Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_S_Forecast_Date__c</fullName>
        <description>Date T&amp;S asset is forecasted to be completed</description>
        <label>T&amp;S Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_S_Forecast_Notes__c</fullName>
        <label>T&amp;S Forecast Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Thoughtful_Questions__c</fullName>
        <label>Thoughtful Questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
                <value>
                    <fullName>4 - Very Good</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>2 - Fair</fullName>
                </value>
                <value>
                    <fullName>1 - Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_T_S_Hours__c</fullName>
        <description>Sum of the Training, Services, and TAM hours associated with this Asset.

Calculated by BatchUpdateAssets</description>
        <label>Total T&amp;S Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Delivered_By__c</fullName>
        <label>Training Delivered By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Orna Kliger</fullName>
                </value>
                <value>
                    <fullName>David Fiore</fullName>
                </value>
                <value>
                    <fullName>Divya Singal</fullName>
                </value>
                <value>
                    <fullName>Matthew Barto</fullName>
                </value>
                <value>
                    <fullName>Brandon Combs</fullName>
                </value>
                <value>
                    <fullName>Melissa Poirier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Delivery_Date__c</fullName>
        <label>Training Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Length_Days__c</fullName>
        <description>Total length of the asset in days</description>
        <formula>IF(AND(NOT(ISBLANK(UsageEndDate)),NOT(ISBLANK(Usage_Start_Date__c))),UsageEndDate-Usage_Start_Date__c,null)</formula>
        <inlineHelpText>Total length of the asset in days</inlineHelpText>
        <label>Training Length (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <label>Training Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Notes__c</fullName>
        <label>Training Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Revenue__c</fullName>
        <formula>IF( CONTAINS( Name, &quot;Training&quot; ),  Price ,
IF( CONTAINS( Name, &quot;RAPID Success&quot; ), Price/2 ,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Services_Completed_Expired_Date__c</fullName>
        <label>Training/Services Completed/Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Dates</fullName>
                    <default>true</default>
                    <label>Waiting on Dates</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Start_Date__c</fullName>
        <label>Usage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1_if_Training_Asset__c</fullName>
        <formula>IF(LEFT(Product_Code__c,3)=&quot;PSO&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 if Training/Services Asset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Services__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Services</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_TAMs__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of TAMs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Trainings__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Trainings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>ASSET.PRICE</columns>
        <columns>PRODUCT2.STOCK_KEEPING_UNIT</columns>
        <columns>ASSET.QUANTITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>License_asset_must_be_linked_to_opp</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    FIND(&quot;SUPPORT&quot;,UPPER(Product2.Name))=0,
    FIND(&quot;MAINTENANCE&quot;,UPPER(Product2.Name))=0,
    ISBLANK(Purchase_Opportunity__c),

   $UserRole.Id &lt;&gt; &quot;00ED0000001QuNy&quot;  /*VMT SF admin*/,
   $UserRole.Id &lt;&gt; &quot;00ED0000001bCuf&quot; /*Training Lead*/ 
   )</errorConditionFormula>
        <errorDisplayField>Purchase_Opportunity__c</errorDisplayField>
        <errorMessage>Assets for licenses must be linked to a purchase opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Revenue_End_Date</fullName>
        <active>true</active>
        <description>Revenue end-date cannot:
	Precede either the Revenue Start Date or Revenue Start Date (Delayed) (if either field actually      contains a date)

         Be in the same month of either the Revenue Start Date or Revenue Start Date (Delayed).</description>
        <errorConditionFormula>AND(
OR(
ISCHANGED(Revenue_End_Date__c),
ISCHANGED(Revenue_Start_Date__c),
ISCHANGED(Revenue_Start_Date_Delayed__c),
AND(ISNEW(),NOT(ISBLANK(Revenue_End_Date__c)))
),
OR(
AND(
NOT(ISBLANK(Revenue_Start_Date__c)),
OR(
Revenue_End_Date__c&lt;Revenue_Start_Date__c,
AND(
MONTH(Revenue_End_Date__c)=MONTH(Revenue_Start_Date__c),
YEAR(Revenue_End_Date__c) &lt;= YEAR(Revenue_Start_Date__c)
)
)
),
AND(
NOT(ISBLANK(Revenue_Start_Date_Delayed__c)),
OR(Revenue_End_Date__c&lt;Revenue_Start_Date_Delayed__c,
AND(
MONTH(Revenue_End_Date__c)=MONTH(Revenue_Start_Date_Delayed__c),
YEAR(Revenue_End_Date__c) &lt;= YEAR(Revenue_Start_Date_Delayed__c)
)
)
)
)
)</errorConditionFormula>
        <errorDisplayField>Revenue_End_Date__c</errorDisplayField>
        <errorMessage>Revenue end-date cannot precede either the Revenue Start Date or Revenue Start Date (Delayed) nor can it be in the same month of either the Revenue Start Date or Revenue Start Date (Delayed).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Quantity_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    $UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
    $UserRole.Name&lt;&gt;&quot;Training Lead&quot;,
    TEXT(Quantity_Type__c)=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Quantity_Type__c</errorDisplayField>
        <errorMessage>Please select a Quantity Type for this Asset.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Edits_to_Assets</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VP of SEs and Customer Success&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
$UserRole.Name&lt;&gt;&quot;Customer Success Manager&quot;,
$UserRole.Name&lt;&gt;&quot;Director of Customer Success&quot;,
$UserRole.Id &lt;&gt; &quot;00ED0000001bCuf&quot; /*Training Lead*/
)</errorConditionFormula>
        <errorMessage>Only Finance, Dan Germain, Training Leads, and Ops may edit these opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Finance_Fields</fullName>
        <active>true</active>
        <description>Price, Revenue Start Date, Revenue Start Date (Delayed), and Revenue End Date should only be edited by Finance</description>
        <errorConditionFormula>AND(
OR(
AND(
ISCHANGED(Price),
NOT(ISBLANK(PRIORVALUE(Price)))
),
AND(
ISCHANGED(Revenue_Start_Date__c),
NOT(ISBLANK(PRIORVALUE(Revenue_Start_Date__c)))
),
AND(
ISCHANGED(Revenue_Start_Date_Delayed__c),
NOT(ISBLANK(PRIORVALUE(Revenue_Start_Date_Delayed__c)))
),
AND(
ISCHANGED(Revenue_End_Date__c),
NOT(ISBLANK(PRIORVALUE(Revenue_End_Date__c)))
)
),
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;
)</errorConditionFormula>
        <errorMessage>Only Finance may edit the Price, Revenue Start Date, Revenue Start Date (Delayed), or Revenue End Date fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_TS_Comp_Exp_Date</fullName>
        <active>true</active>
        <description>Training/Services Completed/Expired Date must be set within the current month OR within the last 7 days. Additionally, Only Finance may edit this field once it has been filled in.</description>
        <errorConditionFormula>AND(
ISCHANGED(Training_Services_Completed_Expired_Date__c),
OR(
NOT(ISBLANK(PRIORVALUE(Training_Services_Completed_Expired_Date__c))),
AND(
Training_Services_Completed_Expired_Date__c&lt;TODAY()-7,
Training_Services_Completed_Expired_Date__c&lt;DATE(YEAR(Today()),MONTH(Today()),1)
)
),
$UserRole.Name&lt;&gt;&quot;CFO&quot;, 
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;
)</errorConditionFormula>
        <errorDisplayField>Training_Services_Completed_Expired_Date__c</errorDisplayField>
        <errorMessage>Training/Services Completed/Expired Date must be set within the current month OR within the last 7 days. If the field is already filled in, you must contact Finance (finance@turbonomic.com) to have this data changed.</errorMessage>
    </validationRules>
</CustomObject>